--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 <p class="post-date">{{ page.date | date_to_string }}</p>
-<p class="post-title">{{ page.title }}</p>
+<h2 class="post-title">{{ page.title }}</h2>
 {{ content }}
