--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen">
 </head>
 <body>
+  <script type="text/javascript">
+    // Async Google Analytics
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-306556-1']);
+    _gaq.push(['_setDomainName', '.arko.net']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ga);
+    })();
+
+  </script>
   <div id="header">
     <h1><a href="http://andre.arko.net">Andre.Arko.net</a></h1>
   </div>
@@ -14,19 +28,9 @@
   <div id="content">
     {{ content }}
   </div>
-  
+
   <div id="footer">
     everything here written by <a href="http://arko.net">Andre Arko</a>
   </div>
-  
-  <script type="text/javascript">
-    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-  <script type="text/javascript">
-  try {
-    var pageTracker = _gat._getTracker("UA-306556-1");
-    pageTracker._trackPageview();
-  } catch(err) {}</script>
 </body>
 </html>
