--- a/css/screen.css
+++ b/css/screen.css
@@ -15,7 +15,7 @@ a {
 a:visited { border: 0; }
 a:hover, a:visited:hover { border-bottom: 2px solid; }
 
-h1, h2 {
+h1, h2, h3 {
   font-weight: normal;
   margin-bottom: 1em;
 }
