[web] Set character encoding

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+
   <title>{{ page.title }}</title>
   <meta name="author" content="Andre Arko">
   <link href="/atom.xml" rel="alternate" title="Andre Arko" type="application/atom+xml">
