--- a/css/screen.css
+++ b/css/screen.css
@@ -82,14 +82,25 @@ h1, h2, h3 {
   float: right;
 }
 
-pre {
-  overflow: hidden;
-  border-right: 1px dashed #CCC;
+code {
+  background-color: #F2F2F2;
 }
 
-pre:hover {
-  overflow: visible;
-  border-right: none;
+pre {
+  overflow: hidden;
+  background-color: #F2F2F2;
+  padding: 10px;
+}
+
+pre code {
+  background-color: transparent;
+  overflow-x: auto; /* Use horizontal scroller if needed; for Firefox 2, not needed in Firefox 3 */
+  white-space: pre-wrap; /* css-3 */
+  white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  width: 99%;
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 .gist {
