--- a/css/screen.css
+++ b/css/screen.css
@@ -14,6 +14,7 @@ a {
 }
 a:visited { border: 0; }
 a:hover, a:visited:hover { border-bottom: 2px solid; }
+a.image { border-bottom: 0; }
 
 h1, h2, h3 {
   font-weight: normal;
@@ -109,4 +110,8 @@ pre code {
 
 .aside {
   font-size: 70%;
+}
+
+#content img {
+  width: 100%;
 }
