[web] ZOMG TYPEKIT

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,12 @@
   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen">
   <link rel="stylesheet" href="/js/facebox/facebox.css" type="text/css" media="screen">
 
+  <link rel="openid.server" href="http://www.myopenid.com/server">
+  <link rel="openid.delegate" href="http://indirect.myopenid.com/">
+
+  <script type="text/javascript" src="http://use.typekit.com/qhr5xpd.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
   <script src="/js/jquery.js" type="text/javascript" charset="utf-8"></script>
   <script src="/js/facebox/facebox.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" charset="utf-8">
@@ -21,9 +27,6 @@
       });
     })
   </script>
-
-  <link rel="openid.server" href="http://www.myopenid.com/server">
-  <link rel="openid.delegate" href="http://indirect.myopenid.com/">
 </head>
 <body>
   <script type="text/javascript">
