[web] oops, not small caps

--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,5 @@
 body {
-  font-family: ff-nuvo-sc-web-pro, skia, verdana, sans-serif;
+  font-family: ff-nuvo-web-pro, sans-serif;
   line-height: 1.3em;
   margin: 4em auto;
   max-width: 35em;
