--- a/css/screen.css
+++ b/css/screen.css
@@ -19,7 +19,8 @@ a.image { border-bottom: 0; }
 
 h1, h2, h3 {
   font-family: junction;
-  font-weight: normal;
+  font-weight: 400;
+  line-height: 1.25em;
   margin-bottom: 1em;
 }
 
