add hire me to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,8 @@
   </div>
 
   <div id="footer">
-    everything here written by <a href="http://arko.net">Andre Arko</a>
+    everything here written by <a href="http://arko.net">Andre Arko</a><br>
+    <a href="mailto:andre+blog@arko.net">hire me</a> for web and Rails consulting
   </div>
 </body>
 </html>
