--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 
   </script>
   <div id="header">
-    <h1><a href="http://andre.arko.net">Andre.Arko.net</a></h1>
+    <h1><a href="http://andre.arko.net">André.Arko.net</a></h1>
   </div>
 
   <div id="content">
@@ -53,7 +53,7 @@
   </div>
 
   <div id="footer">
-    everything here written by <a href="http://arko.net">Andre Arko</a><br>
+    everything here written by <a rel="author" href="http://arko.net">André Arko</a><br>
     <a href="mailto:andre+blog@arko.net">hire me</a> for web and Rails consulting
   </div>
 </body>
