link tag for rel=author

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
 
   <title>{{ page.title }}</title>
   <meta name="author" content="Andre Arko">
-  <link href="/atom.xml" rel="alternate" title="Andre Arko" type="application/atom+xml">
+  <link rel="author" href="https://plus.google.com/116392164619002275727"/>
+  <link href="/atom.xml" rel="alternate" title="André Arko" type="application/atom+xml">
 
   <link rel="stylesheet" href="/css/syntax.css" type="text/css">
   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen">
