--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@
 
   <div id="footer">
     everything here written by <a rel="author" href="http://arko.net">André Arko</a><br>
+    <a href="mailto:andre+blog@arko.net">hire me</a> for web and Rails consulting
   </div>
 </body>
 </html>
