--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,5 @@
 body {
+  color: #222;
   font-family: "chaparral-pro", serif;
   font-weight: 400;
   font-size: 14pt;
@@ -7,7 +8,7 @@ body {
 }
 
 a {
-  color: #1C1C1C;
+  color: #222;
   text-decoration: none;
   border-bottom: 1px solid;
 }
