--- a/css/screen.css
+++ b/css/screen.css
@@ -14,7 +14,7 @@ a {
   text-decoration: none;
   border-bottom: 1px solid;
 }
-a:visited { border-bottom: 1px solid #CCC; }
+a:visited { border-bottom: 1px solid #AAA; }
 a:hover, a:visited:hover { border-bottom: none; }
 a.image { border-bottom: 0; }
 
