--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
     })();
 
   </script>
-  <script type="text/javascript" src="http://use.typekit.com/qhr5xpd.js"></script>
+  <script type="text/javascript" src="https://use.typekit.com/qhr5xpd.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </body>
 </html>
