--- a/css/screen.css
+++ b/css/screen.css
@@ -18,6 +18,18 @@ a:visited { border-bottom: 1px solid #AAA; }
 a:hover, a:visited:hover { border-bottom: 1px solid transparent; }
 a.image { border-bottom: 0; }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+    color: #DDD;
+  }
+
+  a {
+    color: #DDD;
+    border-color: #DDD;
+  }
+}
+
 h1, h2, h3, h4 {
   font-family: "p22-underground", sans-serif;
   font-weight: 600;
