[post] How to do Code Review

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
   </div>
 
   <div id="footer">
-    everything here written by <a rel="author" href="http://arko.net">André Arko</a><br>
+    this is the personal blog of <a rel="author" href="http://arko.net">André Arko</a><br>
   </div>
 
   <script type="text/javascript">
