add viewport meta

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title }}</title>
   <meta name="author" content="Andre Arko">
   <link href="/atom.xml" rel="alternate" title="André Arko" type="application/atom+xml">
