--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,6 @@
+{{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
+  <p class="post-date">{{ .Date | time.Format "02 Jan 2006" }}</p>
+  <h2 class="post-title">{{ .Title }}</h2>
   {{ .Content }}
 {{ end }}
