--- a/themes/andre-arko-net/layouts/_default/baseof.html
+++ b/themes/andre-arko-net/layouts/_default/baseof.html
@@ -19,8 +19,8 @@
     <h1><a href="http://andre.arko.net">André.Arko.net</a></h1>
     <nav>
       <a href="https://arko.net">About</a>
-      <a href="">Talks</a>
-      <a href="">Projects</a>
+      <a href="/talks">Talks</a>
+      <a href="/projects">Projects</a>
     </nav>
   </header>
 
