--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header id="header">
-    <h1><a href="http://andre.arko.net">André.Arko.net</a></h1>
+    <h1><a href="/">André.Arko.net</a></h1>
     <nav>
       <a href="https://arko.net">About</a>
       <a href="/talks">Talks</a>
