--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   {{ .Content }}
 
-  {{ range site.RegularPages.GroupByPublishDate "2006" }}
+  {{ range (where .Site.RegularPages "Type" "post").GroupByPublishDate "2006" }}
     <h2 class="year">{{ .Key }}</h2>
     <ul class="posts">
       {{ range .Pages }}
