give projects and talk pages titles

--- a/layouts/_default/projects.html
+++ b/layouts/_default/projects.html
@@ -1,7 +1,7 @@
-{{ define "title" }}Personal Projects{{ end }}
+{{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
 
-<h2>Personal Projects</h2>
+<h2>{{ .Title }}</h2>
 
 <div>An inverted resume of projects I have worked on when it was not part of my job, for collaboration's sake, or for fun, or for the principle of the thing.</div>
 
