stop escaping html tags in post titles

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,6 +3,6 @@
   {{ .Content }}
 
   {{ range .Pages }}
-    <span class="post-name"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></span>
+    <span class="post-name"><a href="{{ .RelPermalink }}">{{ .LinkTitle | safeHTML }}</a></span>
   {{ end }}
 {{ end }}
