--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
       {{ range .Pages }}
         <li>
           <span class="post-date">{{ .PublishDate | time.Format "Jan 02" }}</span>
-          <span class="post-name"><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></span>
+          <span class="post-name"><a href="{{ .RelPermalink }}">{{ .LinkTitle | safeHTML }}</a></span>
         </li>
       {{ end }}
     </ul>
