--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -35,12 +35,12 @@ body {
 
 a {
   color: #222;
-  text-decoration: none;
-  border-bottom: 1px solid;
+  text-decoration-color: #222;
+  text-underline-offset: 3px;
 }
-a:visited { border-bottom: 1px solid #AAA; }
-a:hover, a:visited:hover { border-bottom: 1px solid transparent; }
-a.image { border-bottom: 0; }
+a:visited { text-decoration-color: #AAA; }
+a:hover, a:visited:hover { text-decoration-color: transparent; }
+a.image { text-decoration: none; }
 
 h1, h2, h3, h4 {
   font-family: "p22-underground", sans-serif;
@@ -243,7 +243,6 @@ ul.talk-events {
 
   a {
     color: #DDD;
-    border-color: #DDD;
   }
 
   .callout, code, pre {
