--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -56,15 +56,20 @@ h3.subtitle {
 
 
 #header {
-  margin: 0 1em 2em 1em;
+  margin: 2em 1em;
   display: flex;
+  flex-wrap: wrap;
   align-items: baseline;
-  gap: 2em;
+  gap: 0 2em;
+}
+
+#header h1 {
+  margin: 0;
 }
 
 #header nav {
   display: flex;
-  gap: 1em;
+  gap: 0 1em;
 }
 
 #content {
@@ -260,7 +265,7 @@ ul.talk-events {
   }
 
   #header {
-    margin: 0;
+    margin: 2em 0;
   }
 
   #content {
