--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,6 +20,7 @@
     <nav>
       <a href="/talks">Talks</a>
       <a href="/projects">Projects</a>
+      <a href="/resume">Resumé</a>
       <a href="https://arko.net">About</a>
     </nav>
   </header>
