update projects introduction

--- a/layouts/_default/projects.html
+++ b/layouts/_default/projects.html
@@ -3,7 +3,7 @@
 
 <h2>{{ .Title }}</h2>
 
-<div>An inverted resume of projects I have worked on when it was not part of my job, for collaboration's sake, or for fun, or for the principle of the thing.</div>
+<div>An inverted resume, listing the projects I have worked on when it was <i>not</i> my job — for collaboration's sake, or for fun, or for the principle of the thing.</div>
 
 <dl class="projects">
   {{ range .Site.Data.projects }}
