move the main#content to allow classes on home

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "title" }}{{ .Title }}{{ end }}
 {{ define "main" }}
+<main id="content">
   <h2 class="post-title">{{ .Title | safeHTML }}</h2>
   {{ .Content }}
+</main>
 {{ end }}
