--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,10 @@
 {{ define "main" }}
+<main id="content">
   <h2>{{ .Title }}</h2>
   {{ .Content }}
 
   {{ range .Pages }}
     <span class="post-name"><a href="{{ .RelPermalink }}">{{ .LinkTitle | safeHTML }}</a></span>
   {{ end }}
+</main>
 {{ end }}
