--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+<main id="content" class="home">
   {{ .Content }}
 
   {{ range (where .Site.RegularPages "Type" "post").GroupByPublishDate "2006" }}
@@ -12,4 +13,5 @@
       {{ end }}
     </ul>
   {{ end }}
+</main>
 {{ end }}
