remove microblog head tags

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="{{ absURL "css/syntax.css" }}" type="text/css">
   <link rel="stylesheet" href="{{ absURL "css/screen.css" }}" type="text/css" media="screen">
   <link rel="alternate" href="{{ absURL "atom.xml" }}" type="application/atom+xml" title="{{ $.Site.Title }}">
-  {{ partial "microblog_head.html" . }}
+  <link rel="me" href="https://github.com/indirect">
+  <link rel="me" href="https://instagram.com/indirect">
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
 </head>
