--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,10 +20,11 @@
   <header id="header">
     <h1><a href="{{ .Site.BaseURL }}">André.Arko.net</a></h1>
     <nav>
-      <a href="/talks">Talks</a>
-      <a href="/projects">Projects</a>
-      <a href="/resume">Resumé</a>
-      <a href="https://arko.net">About</a>
+      <a href='{{ absURL "/note" }}'>Notes</a>
+      <a href='{{ absURL "/talks" }}'>Talks</a>
+      <a href='{{ absURL "/projects" }}'>Projects</a>
+      <a href='{{ absURL "/resume" }}'>Resumé</a>
+      <a href='https://arko.net'>About</a>
     </nav>
   </header>
 
