add a posts-only blog index

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,6 +20,7 @@
   <header id="header">
     <h1><a href="{{ .Site.BaseURL }}">André.Arko.net</a></h1>
     <nav>
+      <a href='{{ absURL "/post" }}'>Blog</a>
       <a href='{{ absURL "/note" }}'>Notes</a>
       <a href='{{ absURL "/talks" }}'>Talks</a>
       <a href='{{ absURL "/projects" }}'>Projects</a>
