fix too-high min-width on phone size screens

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -345,6 +345,8 @@ ul.talk-events {
   #content {
     margin: 0;
     width: 100%;
+    min-width: auto;
+    max-width: auto;
   }
 
   .posts .post-name {
