--- a/layouts/index.atom.xml
+++ b/layouts/index.atom.xml
@@ -11,9 +11,12 @@
     <email>andre@arko.net</email>
   </author>
 
-  {{ range (where .Site.RegularPages "Type" "post" | first 20) }}
+  {{ $entries := .Site.RegularPages | first 20 }}
+  {{/* Ensure we have at least one longform post in the feed, no matter how old */}} 
+  {{ $entries = union $entries (where .Site.RegularPages "Type" "post" | first 1) }}
+  {{ range $entries }}
     <entry>
-      {{ printf `<title type="html"><![CDATA[%s]]></title>` .Title | safeHTML }}
+      {{ printf `<title type="html"><![CDATA[%s]]></title>` (or .Title (.PublishDate | time.Format "3:04pm on Monday January 1 2006")) | safeHTML }}
       <link href="{{ .Permalink }}"/>
       <updated>{{ .PublishDate.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</updated>
       <id>http://andre.arko.net{{ .RelPermalink }}</id>
